--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
                 <div class="help-inner-div">
                     <div class="help-img-div">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="linearGradientPin" gradientUnits="userSpaceOnUse"><stop stop-color="#8B00AF" offset="0%"></stop><stop stop-color="#D40062" offset="90%"></stop><stop stop-color="#FF0613" offset="100%"></stop></linearGradient></defs><path fill="white" fill-rule="evenodd" d="M50 0c23.488-.229 42.74 18.627 43.061 42.176 0 35-39.834 56.53-41.477 57.412a3.278 3.278 0 0 1-3.168 0c-1.643-.882-41.477-22.412-41.477-57.412C7.26 18.626 26.512-.229 50 0zm0 92.824c7.157-4.236 36.373-23.295 36.373-50.648C85.956 22.4 69.727 6.652 50 6.882 30.273 6.652 14.044 22.4 13.627 42.176c0 27.118 29.216 46.412 36.373 50.648zm.176-66.177c9.179.032 16.603 7.502 16.603 16.706a16.706 16.706 0 0 1-10.3 15.44 16.629 16.629 0 0 1-18.164-3.648 16.739 16.739 0 0 1-3.574-18.226 16.66 16.66 0 0 1 15.435-10.272zm0 26.706c5.508 0 9.973-4.477 9.973-10s-4.465-10-9.973-10c-5.508 0-9.973 4.477-9.973 10s4.465 10 9.973 10z"></path></svg>
-                        <img src="../img/ch-loc.png" />
+                        <img src="../img/instruction/ch-loc.png" />
                     </div>
                     <p>منوی مورد علاقه خود را از بین بیش از 4000 رستوران خوب در تهران و شهرستان‌ها جستجو کنید.</p>
                 </div>
@@ -92,7 +92,7 @@
                 <div class="help-inner-div">
                     <div class="help-img-div">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="linearGradientForkSpoon" gradientUnits="userSpaceOnUse"><stop stop-color="#8B00AF" offset="0%"></stop><stop stop-color="#D40062" offset="90%"></stop><stop stop-color="#FF0613" offset="100%"></stop></linearGradient></defs><path fill="white" fill-rule="evenodd" d="M99.954 28.203c.589 11.78-7.784 22.265-19.861 24.87V94.41c.17 1.223-.418 2.429-1.51 3.092a3.47 3.47 0 0 1-3.581 0c-1.092-.663-1.681-1.87-1.51-3.092V53.072c-12.24-2.441-20.822-12.97-20.27-24.869C52.39 15.105 62.84 3.834 76.588 3c13.749.834 24.198 12.105 23.366 25.203zM77.068 46.925c10.126-.94 17.584-9.348 16.763-18.898.821-9.55-6.637-17.959-16.763-18.898-10.103.967-17.528 9.367-16.705 18.898-.823 9.53 6.602 17.93 16.705 18.898zM43.463 3.54a3.362 3.362 0 0 1 3.3 3.364v16.703c.594 12.497-7.853 23.62-20.037 26.382v43.852a3.366 3.366 0 0 1-1.523 3.281 3.355 3.355 0 0 1-3.613 0 3.366 3.366 0 0 1-1.524-3.28V49.988C7.882 47.226-.564 36.104.03 23.607V6.904c0-.892.354-1.747.984-2.378A3.357 3.357 0 0 1 3.39 3.54a3.362 3.362 0 0 1 3.3 3.364v16.703c-.517 8.834 4.978 16.907 13.377 19.654V6.904a3.366 3.366 0 0 1 1.524-3.28 3.355 3.355 0 0 1 3.613 0 3.366 3.366 0 0 1 1.523 3.28v36.357c8.413-2.73 13.915-10.814 13.377-19.654V6.904a3.362 3.362 0 0 1 3.36-3.364z"></path></svg>
-                        <img src="../img/ch-food.png" />
+                        <img src="../img/instruction/ch-food.png" />
                     </div>
                     <p>غذایی که می‌خواهید را انتخاب کنید و بدون هزینه اضافی سفارش خود را ثبت کنید.</p>
                 </div>
@@ -104,27 +104,324 @@
                 <div class="help-inner-div">
                     <div class="help-img-div">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="linearGradientHeart" gradientUnits="userSpaceOnUse"><stop stop-color="#8B00AF" offset="0%"></stop><stop stop-color="#D40062" offset="90%"></stop><stop stop-color="#FF0613" offset="100%"></stop></linearGradient></defs><path fill="white" fill-rule="evenodd" d="M91.235 15.973a25.732 25.732 0 0 0-18.353-8.8A35.802 35.802 0 0 0 50 18.261 35.861 35.861 0 0 0 27.059 7.232a25.438 25.438 0 0 0-18.294 8.741c-11.662 11.77-11.662 30.706 0 42.475 19.764 17.893 30.059 27.28 35.294 32.09a8.723 8.723 0 0 0 11.765 0l35.294-32.09c11.694-11.737 11.747-30.673.117-42.475zM86.53 53.58C71.647 67.248 62.176 75.813 56.118 81.328l-4.647 4.224c-.765.7-1.941.7-2.706 0-5.412-4.81-15.647-14.139-35.294-31.973-8.968-9.125-8.968-23.729 0-32.854a18.9 18.9 0 0 1 13.588-6.746 29.44 29.44 0 0 1 18.412 9.269L50 27.355l4.588-4.107a29.026 29.026 0 0 1 18.294-9.328 19.194 19.194 0 0 1 13.53 6.805c9 9.093 9.053 23.697.117 32.854z"></path></svg>
-                        <img src="../img/ea-food.png" />
+                        <img src="../img/instruction/ea-food.png" />
                     </div>
                     <p>درب منزل یا حضوری از خود رستوران سفارشتان را تحویل بگیرید.</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="bests-div">
-        <div class="bests-title">
+    <div class="bests-res-div">
+        <div class="bests-res-title">
             <h2>رستوران‌ها و فست‌فود‌های برتر ماه بر اساس امتیازدهی کاربران</h2>
         </div>
-        <!--<div class="bests-items">-->
+        <div class="best-restaurants">
 
-            <!--<div class="">-->
-                <!--<div>-->
-                    <!--asd-->
-                    <!--nec=hte-->
-                <!--</div>-->
-            <!--</div>-->
+            <a href="#">
+                <div class="best-res-item">
+                    <img src="../img/bests/bests_pizza-hot.jpeg" />
+                    <p class="best-res-name">فست‌فود پیتزا هات (سعادت آباد)</p>
+                    <div class="res-score">
+                        <span class="score-number">3.5</span>
+                        <div class="score-stars">
+                            <i class="fa fa-star full-star"></i>
+                            <i class="fa fa-star full-star"></i>
+                            <i class="fa fa-star full-star"></i>
+                            <i class="fa fa-star half-star"></i>
+                            <i class="fa fa-star dark-star"></i>
+                        </div>
+                        <span class="number-of-comments">(54)</span>
+                    </div>
+                    <ul class="res-food-types">
+                        <li>پیتزا</li>
+                        <li>فست فود</li>
+                        <li>ساندویچ</li>
+                        <li>برگر</li>
+                    </ul>
+                    <p class="res-shady-address" title="سعادت آباد، پاساژ میلاد نور، طبقه همکف">
+                        سعادت آباد، پاساژ میلاد نور، طبقه همکف
+                    </p>
+                    <button class="start-order-btn">شروع سفارش</button>
+                </div>
+            </a>
 
-        <!--</div>-->
+            <a href="#">
+                <div class="best-res-item">
+                    <img src="../img/bests/bests_shila.jpeg" />
+                    <p class="best-res-name">شیلا (مطهری)</p>
+                    <div class="res-score">
+                        <span class="score-number">3.8</span>
+                        <div class="score-stars">
+                            <i class="fa fa-star full-star"></i>
+                            <i class="fa fa-star full-star"></i>
+                            <i class="fa fa-star full-star"></i>
+                            <i class="fa fa-star full-star"></i>
+                            <i class="fa fa-star dark-star"></i>
+                        </div>
+                        <span class="number-of-comments">(54)</span>
+                    </div>
+                    <ul class="res-food-types">
+                        <li>فست فود</li>
+                        <li>هات داگ</li>
+                        <li>پیتزا</li>
+                        <li>برگر</li>
+                    </ul>
+                    <p class="res-shady-address" title="ولیعصر، مطهری، فتحی شقاقی، زیر برج بلورین">
+                        ولیعصر، مطهری، فتحی شقاقی، زیر برج بلورین
+                    </p>
+                    <button class="start-order-btn">شروع سفارش</button>
+                </div>
+            </a>
+            <a href="#">
+                <div class="best-res-item">
+                    <img src="../img/bests/bests_baguette.jpeg" />
+                    <p class="best-res-name">باگت (اندرزگو)</p>
+                    <div class="res-score">
+                        <span class="score-number">3.8</span>
+                        <div class="score-stars">
+                            <i class="fa fa-star full-star"></i>
+                            <i class="fa fa-star full-star"></i>
+                            <i class="fa fa-star full-star"></i>
+                            <i class="fa fa-star full-star"></i>
+                            <i class="fa fa-star dark-star"></i>
+                        </div>
+                        <span class="number-of-comments">(95)</span>
+                    </div>
+                    <ul class="res-food-types">
+                        <li>فست فود</li>
+                        <li>پیتزا</li>
+                        <li>برگر</li>
+                        <li>ساندویچ</li>
+                    </ul>
+                    <p class="res-shady-address" title="بلوار اندرزگو، بین کاوه و قیطریه، نبش مهر محمدی جنوبی">
+                        بلوار اندرزگو، بین کاوه و قیطریه، نبش مهر محمدی جنوبی
+                    </p>
+                    <button class="start-order-btn">شروع سفارش</button>
+                </div>
+            </a>
+
+        </div>
+    </div>
+    <div class="good-tehran-restaurants">
+        <p>رستوران‌های خوب تهران در ریحون</p>
+        <div class="good-tehran-rest-section">
+            <div class="good-tehran-row">
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/1.jpeg" />
+                        <p>ویترین</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/2.jpeg" />
+                        <p>شاندیز جردن</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/3.jpeg" />
+                        <p>تهیه غذای راد</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/4.png" />
+                        <p>آمولای</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="good-tehran-row">
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/5.jpeg" />
+                        <p>جنارو</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/6.jpeg" />
+                        <p>لانجین</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/7.jpg" />
+                        <p>جو گریل فود</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/8.jpeg" />
+                        <p>رستوران کوبابا</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="good-tehran-row">
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/9.jpeg" />
+                        <p>تومو</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/10.jpeg" />
+                        <p>کترینگ و تشریفات ناریجه</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/11.jpeg" />
+                        <p>امیر شکلات</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="good-tehran-item">
+                        <img src="../img/good-tehran-rests/12.jpeg" />
+                        <p>شیرین پلو</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <br/><br/><br/><br/><br/><br/><br/><br/>
+    </div>
+    <div class="food-type-show">
+        <h1>غذا چی میل دارید؟</h1>
+        <p>صبحانه، ناهار، شام یا هر چیزی که میل دارید را انتخاب کنید</p>
+        <div class="food-type-show-outer">
+            <a href="#">
+                <div class="food-type-show-inner category1">
+                    <div class="food-type-show-inner-shade">
+                        <h2>ساندویچ</h2>
+                        <p>2746 رستوران فعال</p>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="food-type-show-inner category2">
+                    <div class="food-type-show-inner-shade">
+                        <h2>برگر</h2>
+                        <p>2452 رستوران فعال</p>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="food-type-show-inner category3">
+                    <div class="food-type-show-inner-shade">
+                        <h2>پیتزا</h2>
+                        <p>2408 رستوران فعال</p>
+                    </div>
+                </div>
+            </a>
+            <a href="#">
+                <div class="food-type-show-inner category4">
+                    <div class="food-type-show-inner-shade">
+                        <h2>کباب</h2>
+                        <p>1836 رستوران فعال</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="more-foods-div">
+        <h1>انتخاب غذاهای بیشتر</h1>
+        <div class="more-food-items">
+            <a href="#"><div>خورشت</div></a>
+            <a href="#"><div>غذای پلویی</div></a>
+            <a href="#"><div>خوراک</div></a>
+            <a href="#"><div>سالاد</div></a>
+            <a href="#"><div>غذای ایرانی</div></a>
+            <a href="#"><div>فست‌فود</div></a>
+            <a href="#"><div>سوخاری</div></a>
+            <a href="#"><div>پاستا</div></a>
+            <a href="#"><div>چلوکباب</div></a>
+            <a href="#"><div>ماهی</div></a>
+            <a href="#"><div>استیک</div></a>
+            <a href="#"><div>بشقاب</div></a>
+            <a href="#"><div>صبحانه</div></a>
+            <a href="#"><div>سوپ</div></a>
+            <a href="#"><div>غذای دریایی</div></a>
+            <a href="#"><div>آبمیوه طبیعی</div></a>
+        </div>
+    </div>
+    <div class="app-div">
+        <div class="app-div-outer">
+            <div class="app-div-right-side">
+                <h1>ریحون روی موبایل</h1>
+                <p>برای دریافت لینک دانلود اپلیکیشن ریحون، شماره موبایل خود را وارد کنید.</p>
+                <div class="rec-link-div">
+                    <div class="region-getter-typable">
+                        <input type="text" autocomplete="off" role="combobox" placeholder="مثلا 912293****">
+                    </div>
+                    <div class="recv-link-btn cursor-pointer">
+                        دریافت لینک از طریق SMS
+                    </div>
+                </div>
+                <p class="app-div-access-msg">
+                    اپلیکیشن ریحون برای Android و iOS در دسترس است.
+                </p>
+                <div class="app-download-links">
+                    <a href="#"><div><img src="../img/app-downloads/google-play-light.png" /></div></a>
+                    <a href="#"><div><img src="../img/app-downloads/cafebazaar-light.png" /></div></a>
+                    <a href="#"><div><img src="../img/app-downloads/reyhoon-light.png" /></div></a>
+                    <a href="#"><div><img src="../img/app-downloads/ios-direct-light.png" /></div></a>
+                </div>
+            </div>
+            <div class="app-div-left-side">
+                <img src="../img/app-on-phone.png" />
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-info">
+            <div class="footer-info-apps">
+                <h4>اپلیکیشن‌های موبایل</h4>
+                <img src="../img/footer_apps.png" alt="apps"/>
+            </div>
+            <div class="footer-info-support">
+                <h4>پشتیبانی ریحون</h4>
+                <ul>
+                    <li>سوالات متداول</li>
+                    <li>تماس با پشتیبانی</li>
+                    <li>قوانین و مقررات</li>
+                </ul>
+            </div>
+            <div class="footer-info-restaurants">
+                <h4>رستوران‌ها</h4>
+                <ul>
+                    <li>ثبت رستوران</li>
+                </ul>
+            </div>
+            <div class="footer-info-call">
+                <h4>تماس با ریحون</h4>
+                <ul>
+                    <li>درباره ریحون</li>
+                    <li>تماس با ما</li>
+                    <li>وبلاگ ریحون</li>
+                </ul>
+            </div>
+            <div class="footer-info-security">
+                <p>مراقبت و محافظت از حساب کاربری و رمزعبور هر کاربر بر عهده کاربر است. ریحون سریعترین راه سفارش آنلاین غذا است. منوی عکس‌دار رستوران‌های اطرافتان را بر اساس مکان خود به راحتی مشاهده کنید و سفارش دهید.</p>
+                <a href="index.html">لیست رستوران‌ها</a>
+            </div>
+        </div>
+        <div class="footer-credentials">
+            <img src="../img/enamad.png" />
+            <img src="../img/kasbokar.png" />
+        </div>
+        <div class="footer-social">
+            <p>© 2017, Reyhoon, All Rights Reserved.</p>
+            <ul>
+                <li><i class="fab fa-telegram"></i></li>
+                <li><i class="fab fa-facebook"></i></li>
+                <li><i class="fab fa-twitter"></i></li>
+                <li><i class="fab fa-instagram"></i></li>
+                <li><i class="fab fa-google-plus"></i></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
