--- a/src/register.html
+++ b/src/register.html
@@ -11,22 +11,23 @@
 <div class="header">
     <img src="../img/logo.svg" alt="Reyhoon"/>
 </div>
-<div class="authentication-type">
-    <div class="authentication-login">
+<div class="authentication-div">
+    <div class="auth-login">
         <i class="fa fa-user"></i>
         <a href="login.html"><p>ورود</p></a>
     </div>
-    <div class="authentication-register">
+    <div class="auth-reg">
         <i class="fa fa-user"></i>
         <p>ثبت نام</p>
     </div>
 </div>
-<div class="welcome">
+
+<div class="page-title">
     <h2>ثبت نام</h2>
     <p>از اینکه داری به جمع ریحونیا می‌پیوندی خیلی خوشحالیم</p>
 </div>
-<div class="form-layout">
-    <div class="input-fill">
+<div class="form-div">
+    <div class="input-div">
         <div class="input-container">
             <i class="fa fa-user"></i>
             <input type="text" placeholder="نام و نام‌خانوادگی">
@@ -42,22 +43,22 @@
             <input type="text" placeholder="ایمیل">
         </div>
     </div>
-    <div class="input-fill">
+    <div class="input-div">
         <div class="input-container">
             <i class="fa fa-key"></i>
             <input type="text" placeholder="رمز عبور">
         </div>
     </div>
-    <div class="input-fill">
+    <div class="input-div">
         <div class="input-container">
             <i class="fa fa-key"></i>
             <input type="text" placeholder="تکرار رمز عبور">
         </div>
     </div>
-    <button>ثبت نام</button>
+    <button class="form-btn">ثبت نام</button>
 </div>
 <div class="footer">
-    <ul class="footer-social">
+    <ul class="social">
         <li><i class="fab fa-telegram"></i></li>
         <li><i class="fab fa-facebook"></i></li>
         <li><i class="fab fa-twitter"></i></li>
@@ -65,7 +66,7 @@
         <li><i class="fab fa-google-plus"></i></li>
     </ul>
     <div class="footer-divider"></div>
-    <ul class="footer-options">
+    <ul class="options">
         <li>سوالات متداول</li>
         <li>ثبت رستوران</li>
         <li>درباره ریحون</li>
