--- a/src/login.html
+++ b/src/login.html
@@ -11,7 +11,7 @@
 <div class="header">
     <img src="../img/logo.svg" alt="Reyhoon"/>
 </div>
-<div class="authentication-type">
+<div class="authentication-div">
     <div class="authentication-login">
         <i class="fa fa-user"></i>
         <p>ورود</p>
@@ -21,11 +21,11 @@
         <a href="register.html"><p>ثبت نام</p></a>
     </div>
 </div>
-<div class="welcome">
+<div class="page-title">
     <h2>ورود</h2>
     <p>از اینکه داری به جمع ریحونیا می‌پیوندی خیلی خوشحالیم</p>
 </div>
-<div class="form-layout">
+<div class="form-div">
     <div class="input-container">
         <i class="fa fa-user"></i>
         <input type="text" placeholder="نام و نام‌خانوادگی" >
@@ -35,7 +35,7 @@
         <input type="text" placeholder="رمز عبور">
     </div>
     <a>رمز عبور خود را فراموش کردم</a>
-    <button>ورود</button>
+    <button class="form-btn">ورود</button>
 </div>
 <div class="footer">
     <ul class="footer-social">
