--- a/src/login.html
+++ b/src/login.html
@@ -12,11 +12,11 @@
     <img src="../img/logo.svg" alt="Reyhoon"/>
 </div>
 <div class="authentication-div">
-    <div class="authentication-login">
+    <div class="auth-login">
         <i class="fa fa-user"></i>
         <p>ورود</p>
     </div>
-    <div class="authentication-register">
+    <div class="auth-reg">
         <i class="fa fa-user"></i>
         <a href="register.html"><p>ثبت نام</p></a>
     </div>
@@ -38,7 +38,7 @@
     <button class="form-btn">ورود</button>
 </div>
 <div class="footer">
-    <ul class="footer-social">
+    <ul class="social">
         <li><i class="fab fa-telegram"></i></li>
         <li><i class="fab fa-facebook"></i></li>
         <li><i class="fab fa-twitter"></i></li>
@@ -46,7 +46,7 @@
         <li><i class="fab fa-google-plus"></i></li>
     </ul>
     <div class="footer-divider"></div>
-    <ul class="footer-options">
+    <ul class="options">
         <li>سوالات متداول</li>
         <li>ثبت رستوران</li>
         <li>درباره ریحون</li>
