let's have a dynamic page using ajax and jquery

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <title>سفارش آنلاین غذا از بهترین رستوران‌ها و فست فودها | ریحون</title>
     <link rel="icon" type="image/ico" href="../img/favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/main.js"></script>
 </head>
 <body>
     <div class="header">
@@ -117,174 +119,11 @@
         </div>
         <div class="best-restaurants">
 
-            <a href="#">
-                <div class="best-res-item">
-                    <img src="../img/bests/bests_pizza-hot.jpeg" />
-                    <p class="best-res-name">فست‌فود پیتزا هات (سعادت آباد)</p>
-                    <div class="res-score">
-                        <span class="score-number">3.5</span>
-                        <div class="score-stars">
-                            <i class="fa fa-star full-star"></i>
-                            <i class="fa fa-star full-star"></i>
-                            <i class="fa fa-star full-star"></i>
-                            <i class="fa fa-star half-star"></i>
-                            <i class="fa fa-star dark-star"></i>
-                        </div>
-                        <span class="number-of-comments">(54)</span>
-                    </div>
-                    <ul class="res-food-types">
-                        <li>پیتزا</li>
-                        <li>فست فود</li>
-                        <li>ساندویچ</li>
-                        <li>برگر</li>
-                    </ul>
-                    <p class="res-shady-address" title="سعادت آباد، پاساژ میلاد نور، طبقه همکف">
-                        سعادت آباد، پاساژ میلاد نور، طبقه همکف
-                    </p>
-                    <button class="start-order-btn">شروع سفارش</button>
-                </div>
-            </a>
-
-            <a href="#">
-                <div class="best-res-item">
-                    <img src="../img/bests/bests_shila.jpeg" />
-                    <p class="best-res-name">شیلا (مطهری)</p>
-                    <div class="res-score">
-                        <span class="score-number">3.8</span>
-                        <div class="score-stars">
-                            <i class="fa fa-star full-star"></i>
-                            <i class="fa fa-star full-star"></i>
-                            <i class="fa fa-star full-star"></i>
-                            <i class="fa fa-star full-star"></i>
-                            <i class="fa fa-star dark-star"></i>
-                        </div>
-                        <span class="number-of-comments">(54)</span>
-                    </div>
-                    <ul class="res-food-types">
-                        <li>فست فود</li>
-                        <li>هات داگ</li>
-                        <li>پیتزا</li>
-                        <li>برگر</li>
-                    </ul>
-                    <p class="res-shady-address" title="ولیعصر، مطهری، فتحی شقاقی، زیر برج بلورین">
-                        ولیعصر، مطهری، فتحی شقاقی، زیر برج بلورین
-                    </p>
-                    <button class="start-order-btn">شروع سفارش</button>
-                </div>
-            </a>
-            <a href="#">
-                <div class="best-res-item">
-                    <img src="../img/bests/bests_baguette.jpeg" />
-                    <p class="best-res-name">باگت (اندرزگو)</p>
-                    <div class="res-score">
-                        <span class="score-number">3.8</span>
-                        <div class="score-stars">
-                            <i class="fa fa-star full-star"></i>
-                            <i class="fa fa-star full-star"></i>
-                            <i class="fa fa-star full-star"></i>
-                            <i class="fa fa-star full-star"></i>
-                            <i class="fa fa-star dark-star"></i>
-                        </div>
-                        <span class="number-of-comments">(95)</span>
-                    </div>
-                    <ul class="res-food-types">
-                        <li>فست فود</li>
-                        <li>پیتزا</li>
-                        <li>برگر</li>
-                        <li>ساندویچ</li>
-                    </ul>
-                    <p class="res-shady-address" title="بلوار اندرزگو، بین کاوه و قیطریه، نبش مهر محمدی جنوبی">
-                        بلوار اندرزگو، بین کاوه و قیطریه، نبش مهر محمدی جنوبی
-                    </p>
-                    <button class="start-order-btn">شروع سفارش</button>
-                </div>
-            </a>
-
         </div>
     </div>
     <div class="good-tehran-restaurants">
         <p>رستوران‌های خوب تهران در ریحون</p>
         <div class="good-tehran-rest-section">
-            <div class="good-tehran-row">
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/1.jpeg" />
-                        <p>ویترین</p>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/2.jpeg" />
-                        <p>شاندیز جردن</p>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/3.jpeg" />
-                        <p>تهیه غذای راد</p>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/4.png" />
-                        <p>آمولای</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="good-tehran-row">
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/5.jpeg" />
-                        <p>جنارو</p>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/6.jpeg" />
-                        <p>لانجین</p>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/7.jpg" />
-                        <p>جو گریل فود</p>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/8.jpeg" />
-                        <p>رستوران کوبابا</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="good-tehran-row">
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/9.jpeg" />
-                        <p>تومو</p>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/10.jpeg" />
-                        <p>کترینگ و تشریفات ناریجه</p>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/11.jpeg" />
-                        <p>امیر شکلات</p>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="good-tehran-item">
-                        <img src="../img/good-tehran-rests/12.jpeg" />
-                        <p>شیرین پلو</p>
-                    </div>
-                </a>
-            </div>
         </div>
         <br/><br/><br/><br/><br/><br/><br/><br/>
     </div>
@@ -292,59 +131,43 @@
         <h1>غذا چی میل دارید؟</h1>
         <p>صبحانه، ناهار، شام یا هر چیزی که میل دارید را انتخاب کنید</p>
         <div class="food-type-show-outer">
-            <a href="#">
-                <div class="food-type-show-inner category1">
-                    <div class="food-type-show-inner-shade">
-                        <h2>ساندویچ</h2>
-                        <p>2746 رستوران فعال</p>
-                    </div>
-                </div>
-            </a>
-            <a href="#">
-                <div class="food-type-show-inner category2">
-                    <div class="food-type-show-inner-shade">
-                        <h2>برگر</h2>
-                        <p>2452 رستوران فعال</p>
-                    </div>
-                </div>
-            </a>
-            <a href="#">
-                <div class="food-type-show-inner category3">
-                    <div class="food-type-show-inner-shade">
-                        <h2>پیتزا</h2>
-                        <p>2408 رستوران فعال</p>
-                    </div>
-                </div>
-            </a>
-            <a href="#">
-                <div class="food-type-show-inner category4">
-                    <div class="food-type-show-inner-shade">
-                        <h2>کباب</h2>
-                        <p>1836 رستوران فعال</p>
-                    </div>
-                </div>
-            </a>
+            <!--<a href="#">-->
+                <!--<div class="food-type-show-inner category1">-->
+                    <!--<div class="food-type-show-inner-shade">-->
+                        <!--<h2>ساندویچ</h2>-->
+                        <!--<p>2746 رستوران فعال</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</a>-->
+            <!--<a href="#">-->
+                <!--<div class="food-type-show-inner category2">-->
+                    <!--<div class="food-type-show-inner-shade">-->
+                        <!--<h2>برگر</h2>-->
+                        <!--<p>2452 رستوران فعال</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</a>-->
+            <!--<a href="#">-->
+                <!--<div class="food-type-show-inner category3">-->
+                    <!--<div class="food-type-show-inner-shade">-->
+                        <!--<h2>پیتزا</h2>-->
+                        <!--<p>2408 رستوران فعال</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</a>-->
+            <!--<a href="#">-->
+                <!--<div class="food-type-show-inner category4">-->
+                    <!--<div class="food-type-show-inner-shade">-->
+                        <!--<h2>کباب</h2>-->
+                        <!--<p>1836 رستوران فعال</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</a>-->
         </div>
     </div>
     <div class="more-foods-div">
         <h1>انتخاب غذاهای بیشتر</h1>
         <div class="more-food-items">
-            <a href="#"><div>خورشت</div></a>
-            <a href="#"><div>غذای پلویی</div></a>
-            <a href="#"><div>خوراک</div></a>
-            <a href="#"><div>سالاد</div></a>
-            <a href="#"><div>غذای ایرانی</div></a>
-            <a href="#"><div>فست‌فود</div></a>
-            <a href="#"><div>سوخاری</div></a>
-            <a href="#"><div>پاستا</div></a>
-            <a href="#"><div>چلوکباب</div></a>
-            <a href="#"><div>ماهی</div></a>
-            <a href="#"><div>استیک</div></a>
-            <a href="#"><div>بشقاب</div></a>
-            <a href="#"><div>صبحانه</div></a>
-            <a href="#"><div>سوپ</div></a>
-            <a href="#"><div>غذای دریایی</div></a>
-            <a href="#"><div>آبمیوه طبیعی</div></a>
         </div>
     </div>
     <div class="app-div">
