--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
     <div class="header">
         <div class="header-container">
             <div order="1" class="splitter-container">
-                <div><a href="login.html">ورود</a></div>
+                <div><a href="authentication.html">ورود</a></div>
                 <span class="splitter"></span>
-                <div><a href="register.html">عضویت</a></div>
+                <div><a href="authentication.html">عضویت</a></div>
             </div>
             <div order="2">
                 <a href="#">راهنما</a>
