--- a/src/authentication.html
+++ b/src/authentication.html
@@ -37,7 +37,7 @@
         </div>
         <div class="input-container">
             <i class="fa fa-key"></i>
-            <input type="text" placeholder="رمز عبور">
+            <input type="password" placeholder="رمز عبور">
         </div>
         <a href="#">رمز عبور خود را فراموش کردم</a>
         <button class="form-btn">ورود</button>
@@ -65,11 +65,11 @@
         </div>
         <div class="input-container">
             <i class="fa fa-key"></i>
-            <input type="text" placeholder="رمز عبور">
+            <input type="password" placeholder="رمز عبور">
         </div>
         <div class="input-container">
             <i class="fa fa-key"></i>
-            <input type="text" placeholder="تکرار رمز عبور">
+            <input type="password" placeholder="تکرار رمز عبور">
         </div>
         <button class="form-btn">ثبت نام</button>
     </div>
