--- a/src/authentication.html
+++ b/src/authentication.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>سفارش آنلاین غذا از بهترین رستوران‌ها و فست فودها | ریحون</title>
-    <link href="../assets/global.css" rel="stylesheet" type="text/css">
-    <link href="../assets/authentication.css" rel="stylesheet" type="text/css">
+    <link href="assets/styles/global.css" rel="stylesheet" type="text/css">
+    <link href="assets/styles/authentication.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/authentication.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/authentication.js"></script>
 </head>
 <body>
 <div class="header">
-    <img src="../img/logo.svg" alt="Reyhoon"/>
+    <img src="assets/img/logo.svg" alt="Reyhoon"/>
 </div>
 
 <div class="authentication-div">
