--- a/src/authentication.html
+++ b/src/authentication.html
@@ -5,6 +5,7 @@
     <title>سفارش آنلاین غذا از بهترین رستوران‌ها و فست فودها | ریحون</title>
     <link href="assets/styles/global.css" rel="stylesheet" type="text/css">
     <link href="assets/styles/authentication.css" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/ico" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script src="js/jquery.min.js"></script>
     <script src="js/authentication.js"></script>
