restructure to start using ReactJS

--- a/client/public/main.html
+++ b/client/public/main.html
@@ -139,30 +139,6 @@
                     <!--</div>-->
                 <!--</div>-->
             <!--</a>-->
-            <!--<a href="#">--ض>
-                <!--<div class="food-type-show-inner category2">-->
-                    <!--<div class="food-type-show-inner-shade">-->
-                        <!--<h2>برگر</h2>-->
-                        <!--<p>2452 رستوران فعال</p>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</a>-->
-            <!--<a href="#">-->
-                <!--<div class="food-type-show-inner category3">-->
-                    <!--<div class="food-type-show-inner-shade">-->
-                        <!--<h2>پیتزا</h2>-->
-                        <!--<p>2408 رستوران فعال</p>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</a>-->
-            <!--<a href="#">-->
-                <!--<div class="food-type-show-inner category4">-->
-                    <!--<div class="food-type-show-inner-shade">-->
-                        <!--<h2>کباب</h2>-->
-                        <!--<p>1836 رستوران فعال</p>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</a>-->
         </div>
     </div>
     <div class="more-foods-div">
@@ -228,7 +204,7 @@
             </div>
             <div class="footer-info-security">
                 <p>مراقبت و محافظت از حساب کاربری و رمزعبور هر کاربر بر عهده کاربر است. ریحون سریعترین راه سفارش آنلاین غذا است. منوی عکس‌دار رستوران‌های اطرافتان را بر اساس مکان خود به راحتی مشاهده کنید و سفارش دهید.</p>
-                <a href="index.html">لیست رستوران‌ها</a>
+                <a href="#">لیست رستوران‌ها</a>
             </div>
         </div>
         <div class="footer-credentials">
