split the main page to some react components

--- a/client/public/authentication.html
+++ b/client/public/authentication.html
@@ -11,7 +11,7 @@
     <script src="js/authentication.js"></script>
 </head>
 <body>
-<div class="header">
+<div class="auth-header">
     <img src="assets/img/logo.svg" alt="Reyhoon"/>
 </div>
 
@@ -75,7 +75,7 @@
         <button class="form-btn">ثبت نام</button>
     </div>
 </div>
-<div class="footer">
+<div class="auth-footer">
     <ul class="social">
         <li><i class="fab fa-telegram"></i></li>
         <li><i class="fab fa-facebook"></i></li>
@@ -83,7 +83,7 @@
         <li><i class="fab fa-instagram"></i></li>
         <li><i class="fab fa-google-plus"></i></li>
     </ul>
-    <div class="footer-divider"></div>
+    <div class="auth-footer-divider"></div>
     <ul class="options">
         <li>سوالات متداول</li>
         <li>ثبت رستوران</li>
